--- a/kona3engine/plugins/nako3/tpl-code.html
+++ b/kona3engine/plugins/nako3/tpl-code.html
@@ -5,28 +5,33 @@
 <!-- 以下毎回取り込まれる部分 -->
 <div class="nako3">
 
-<div id="nako3_editor_main_{{pid}}" class="nako3row">
-<form id="nako3codeform_{{pid}}" action="{{ post_url} }" method="POST">
+<div id="nako3_editor_main_{{pid}}" class="nako3row_pad">
+<form id="nako3codeform_{{pid}}" action="{{ post_url }}" method="POST">
 <textarea
+  style="display: none;"
   id="nako3_code_{{pid}}"
   rows="{{rows}}"
   class="nako3txt"
   name="body" {{ readonly }}
  >{{ code }}</textarea>
+<div id="ace_editor{{pid}}" style="height:{{edit_height}};">{{code}}</div>
 <input type="hidden" name="version" value="{{ ver }}" />
 </form>
+
 </div><!-- end of #nako3_editor_main_{{pid}} -->
 
-<div id="nako3_editor_controlls_{{pid}}" class="nako3row" style="padding-bottom:4px;">
-  <button onclick="nako3_run({{pid}}, {{ j_use_canvas }})">▶ 実行</button>
-  <button onclick="nako3_clear({{pid}}, {{ j_use_canvas }})">クリア</button>
-  <span id="post_span_{{pid}}" class="post_span">
-    <button id="post_button_{{pid}}" onclick="nako3_post_{{pid}}()">公開</button>
-    &nbsp;&nbsp;
-    <a href="#" id="save_button_{{pid}}" class="tmp_btn" onclick="nako3_save({{pid}})">仮保存</a>
-    <a href="#" id="load_button_{{pid}}" class="tmp_btn" onclick="nako3_load({{pid}})">仮読込</a>
-  </span>
-  <span class='nako3ver'>&nbsp;&nbsp;v{{ ver }}</span>
+<div class="nako3row">
+  <div id="nako3_editor_controlls_{{pid}}" class="nako3ctrl">
+    <button onclick="nako3_run({{pid}}, {{ j_use_canvas }})">▶ 実行</button>
+    <button onclick="nako3_clear({{pid}}, {{ j_use_canvas }})">クリア</button>
+    <span class='nako3ver'>&nbsp;&nbsp;v{{ ver }}</span>
+    <span id="post_span_{{pid}}" class="post_span">
+      <button id="post_button_{{pid}}" onclick="nako3_post_submit({{pid}})">公開</button>
+      &nbsp;&nbsp;
+      <a href="#" id="save_button_{{pid}}" class="tmp_btn" onclick="nako3_save({{pid}})">仮保存</a>
+      <a href="#" id="load_button_{{pid}}" class="tmp_btn" onclick="nako3_load({{pid}})">仮読込</a>
+    </span>
+  </div>
 </div><!-- end of #nako3_editor_controlls_{{pid}} -->
 
 <!-- ERROR -->
@@ -47,12 +52,15 @@
 
 <!-- dynamic js code -->
 <script type="text/javascript">
-  const post_span_{{pid}} = document.getElementById('post_span_{{pid}}');
-  post_span_{{pid}}.style.visibility = {{ can_save }} ? "visible" : "hidden"; // for post
-  function nako3_post_{{pid}}() {
-    const post_button = document.getElementById('post_button_{{pid}}')
-    document.getElementById('nako3codeform_{{pid}}').submit();
-  }
+(function(){
+  // post
+  const pid = {{pid}};
+  const can_save = {{ can_save }};
+  // post button
+  post_button_init(pid, can_save);
+  // ace_editor
+  ace_editor_init(pid);
+})();
 </script>
-<!-- [/tpl-code.html] -->
 
+<!-- [/tpl-code.html] -->
