--- a/kona3engine/plugins/nako3/tpl-js-nako3.html
+++ b/kona3engine/plugins/nako3/tpl-js-nako3.html
@@ -1,25 +1,27 @@
-<!-- [tpl-js.html] -->
+<!-- [tpl-js-nako3.html] -->
 <!-- 一度だけ取り込まれる部分 -->
 <script type="text/javascript">
-var nako3_info_id = 0
-var baseurl = '{{ baseurl }}'
-var nako3_get_resultbox = function () {
+// baseurl
+const baseurl = '{{ baseurl }}';
+
+let nako3_info_id = 0; // 実行ボタンを押した時に書き換えられる
+function nako3_get_resultbox() {
   return document.getElementById("nako3result_div_" + nako3_info_id)
 }
-var nako3_get_info = function () {
+function nako3_get_info() {
   return document.getElementById("nako3_info_" + nako3_info_id)
 }
-var nako3_get_error = function () {
+function nako3_get_error() {
   return document.getElementById("nako3_error_" + nako3_info_id)
 }
-var nako3_get_canvas = function () {
+function nako3_get_canvas() {
   return document.getElementById("nako3_canvas_" + nako3_info_id)
 }
-var nako3_get_div = function () {
+function nako3_get_div() {
   return document.getElementById("nako3_div_" + nako3_info_id)
 }
 // 表示
-var nako3_print = function (s) {
+const nako3_print = function (s) {
   console.log("[表示] " + s)
   var info = nako3_get_info()
   if (!info) return
@@ -39,7 +41,7 @@ var nako3_print = function (s) {
   }
 }
 //---------------------------------
-var nako3_clear = function (s, use_canvas) {
+const nako3_clear = function (s, use_canvas) {
   var info = nako3_get_info()
   if (!info) return
   info.innerHTML = ''
@@ -59,11 +61,11 @@ var nako3_clear = function (s, use_canvas) {
 }
 
 // 独自関数の登録
-var nako3_add_func = function () {
+const nako3_add_func = function () {
   navigator.nako3.setFunc("表示", [['の', 'を', 'と']], nako3_print)
   navigator.nako3.setFunc("表示ログクリア", [], nako3_clear)
 }
-var nako3_init_timer = setInterval(function(){
+let nako3_init_timer = setInterval(function(){
   if (typeof(navigator.nako3) === 'undefined') return
   clearInterval(nako3_init_timer)
   nako3_add_func()
@@ -83,9 +85,10 @@ function nako3_run(id, use_canvas) {
     alert('現在ライブラリを読み込み中です。しばらくお待ちください。')
     return
   }
-  var code_e = document.getElementById("nako3_code_" + id)
-  if (!code_e) return
-  var code = code_e.value
+  // var code_e = document.getElementById("nako3_code_" + id)
+  // if (!code_e) return
+  // var code = code_e.value
+  const code = ace_editors[id].getValue()
   var canvas_name = "#nako3_canvas_" + id
   var div_name = "#nako3_div_" + id
   var addon =
@@ -109,27 +112,5 @@ function nako3_run(id, use_canvas) {
   }
 }
 
-// 仮保存のための処理
-function get_kari_hozon_key(pid) {
-  return 'nako3edit_kari_src_' + pid;
-}
-function nako3_save(pid) {
-  var doc = document.getElementById('nako3_code_' + pid)
-  localStorage[get_kari_hozon_key(pid)] = doc.value
-  alert('仮保存しました')
-}
-function nako3_load(pid) {
-  var src = localStorage[get_kari_hozon_key(pid)];
-  if (!src) {
-    alert('仮保存しているプログラムはありません');
-    return;
-  }
-  var a = confirm(
-    '仮保存しているソースを読み込みますか？\n' + 
-    '---\n' + src.substr(0, 10));
-  if (!a) return;
-  var doc = document.getElementById('nako3_code_' + pid);
-  doc.value = src;
-}
 </script>
-<!-- [/tpl-js.html] -->
+<!-- [/tpl-js-nako3.html] -->
