--- a/kona3engine/plugins/nako3/tpl-style.html
+++ b/kona3engine/plugins/nako3/tpl-style.html
@@ -3,12 +3,21 @@
 <style>
 .nako3 { border: 1px solid #a0a0ff; padding:4px; margin:2px; }
 .nako3row { margin:0; padding: 0; }
+.nako3row_pad { padding-top: 4px; padding-bottom: 4px;}
 .nako3txt {
   margin:0; padding: 4px; font-size:1em; line-height:1.2em;
   width: 98%;
 }
-.nako3row  > button, 
-.post_span > button { font-size:1em; padding:8px; }
+.nako3ctrl {
+  border-top: 1px solid #f0f0f0;
+  border-bottom: 1px solid #f0f0f0;
+  margin: 0px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 4px;
+}
+.nako3ctrl button, 
+.post_span button { font-size:1em; padding:8px; }
 .post_span { margin-left: 8px; }
 .tmp_btn {
   border-bottom: 1px solid gray;
