nako3 plguin fixed problem

--- a/kona3engine/plugins/nako3/tpl-js-nako3.html
+++ b/kona3engine/plugins/nako3/tpl-js-nako3.html
@@ -104,7 +104,7 @@ function nako3_run(id, use_canvas) {
   try {
     nako3_info_id = id
     nako3_clear()
-    navigator.nako3.run(addon + "\\n" + code)
+    navigator.nako3.run(addon + "\n" + code)
     console.log("DONE")
   } catch (e) {
     nako3_print("==ERROR==" + e.message + "")
