nako3 plugins カメのURLが間違っていた問題を修正

--- a/kona3engine/plugins/nako3/tpl-js-nako3.html
+++ b/kona3engine/plugins/nako3/tpl-js-nako3.html
@@ -99,7 +99,7 @@ function nako3_run(id, use_canvas) {
       "「" + canvas_name + "」へ描画開始;" +
       "カメ描画先=「" + canvas_name + "」;" +
       "カメ全消去;" +
-      "カメ画像URL=「" + baseurl + "/demo/turtle.png」;"
+      "カメ画像URL=「https://nadesi.com/v3/doc/attach/turtle64.png」;"
   } 
   try {
     nako3_info_id = id
