nako3 plugins turtle url

--- a/kona3engine/plugins/nako3/tpl-js-nako3.html
+++ b/kona3engine/plugins/nako3/tpl-js-nako3.html
@@ -98,8 +98,7 @@ function nako3_run(id, use_canvas) {
     addon += 
       "「" + canvas_name + "」へ描画開始;" +
       "カメ描画先=「" + canvas_name + "」;" +
-      "カメ全消去;" +
-      "カメ画像URL=「https://nadesi.com/v3/doc/attach/turtle64.png」;"
+      "カメ全消去;"
   } 
   try {
     nako3_info_id = id
