--- a/kona3engine/plugins/nako3/tpl-style.html
+++ b/kona3engine/plugins/nako3/tpl-style.html
@@ -68,5 +68,23 @@
   padding: 4px;
   margin: 4px;
 }
+.nako3-editor .ace_name.ace_function {
+	color: #996506;
+}
+.nako3-editor .ace_string.ace_other {
+	color: #C00;
+}
+.nako3-editor .ace_keyword.ace_operator {
+	color: black;
+}
+.nako3-editor .ace_constant.ace_numeric {
+	color: rgb(27, 143, 23);
+}
+.nako3-editor .ace_support.ace_constant {
+	color: #037d99;
+}
+.nako3-editor.readonly {
+  background-color:#f0f0f0;
+}
 </style>
 <!-- [/tpl-style] -->
