--- a/kona3engine/plugins/nako3/tpl-code.html
+++ b/kona3engine/plugins/nako3/tpl-code.html
@@ -12,9 +12,9 @@
   id="nako3_code_{{pid}}"
   rows="{{rows}}"
   class="nako3txt"
-  name="body" {{ readonly }}
+  name="body"
  >{{ code }}</textarea>
-<div id="ace_editor{{pid}}" style="height:{{edit_height}};">{{code}}</div>
+<div id="ace_editor{{pid}}" class="nako3_editor" style="height:{{edit_height}};" data-nako3-readonly="{{ readonly }}" data-nako3-disable-marker="{{ data_disable_marker }}">{{code}}</div>
 <input type="hidden" name="version" value="{{ ver }}" />
 </form>
 
