なでしこ言語のエディタでプラグインを取り込めるように更新

--- a/kona3engine/plugins/nako3/tpl-code.html
+++ b/kona3engine/plugins/nako3/tpl-code.html
@@ -31,14 +31,8 @@
   </div>
 </div><!-- end of #nako3_editor_controlls_{{pid}} -->
 
-<!-- ERROR -->
-<div class="nako3row nako3error" id="nako3_error_{{pid}}" style="display:none"></div>
-
 <!-- RESULT -->
-<div id="nako3result_div_{{pid}}" class="nako3row" style="display:none;">
-  <textarea class="nako3row nako3info" readonly
-            id="nako3_info_{{pid}}" rows="5" style="display:none"></textarea>
-</div><!-- end of #nako3_error_{{pid}} -->
+<div id="nako3result_div_{{pid}}" class="nako3row nako3info" style="display:none;"></div>
 
 <!-- FREE DOM AREA -->
 <div id="nako3_div_{{ pid }}" class="nako3_div"></div>
