--- a/kona3engine/plugins/nako3/tpl-style.html
+++ b/kona3engine/plugins/nako3/tpl-style.html
@@ -30,7 +30,7 @@
   color: black;
 }
 .nako3info {
-  background-color: #f0f0ff;
+  background-color: #f3f3ff71;
   border: 1px solid #a0a0ff;
   padding: 4px; margin: 0;
   font-size: 1em;
@@ -41,10 +41,6 @@
   font-size:1em; border:1px solid #a0a0ff; margin:4px;
 }
 .nako3ver { font-size:0.7em; color:gray; }
-.nako3info_html {
-  border: 1px solid #a0a0a0;
-  padding: 4px; margin: 4px;
-}
 .nako3_conv_html_link {
   color: navy;
   font-size: 9px; padding: 4px;
