--- a/kona3engine/plugins/nako3/tpl-js-nako3.html
+++ b/kona3engine/plugins/nako3/tpl-js-nako3.html
@@ -8,11 +8,14 @@ const nako3_clear = function (id, use_canvas) {
   const resultDiv = document.getElementById("nako3result_div_" + id)
   if (resultDiv) resultDiv.innerHTML = ''
   if (use_canvas) {
-    var canvas = document.getElementById("nako3_canvas_" + nako3_info_id)
+    var canvas = document.getElementById("nako3_canvas_" + id)
     if (canvas) {
       var ctx = canvas.getContext('2d')
       ctx.clearRect(0, 0, canvas.width, canvas.height)
     }
+  }
+  if (navigator.nako3) {
+    navigator.nako3.clearPlugins()
   }
 }
 
