nako3 plugins カメ全消去なくても動くので削除

--- a/kona3engine/plugins/nako3/tpl-js-nako3.html
+++ b/kona3engine/plugins/nako3/tpl-js-nako3.html
@@ -37,8 +37,7 @@ function nako3_run(id, use_canvas) {
   if (use_canvas) {
     addon += 
       "「" + canvas_name + "」へ描画開始;" +
-      "カメ描画先=「" + canvas_name + "」;" +
-      "カメ全消去;"
+      "カメ描画先=「" + canvas_name + "」;" 
   }
   const preCode = addon + "\n"
 
