--- a/kona3engine/plugins/nako3/tpl-js-edit.html
+++ b/kona3engine/plugins/nako3/tpl-js-edit.html
@@ -1,6 +1,13 @@
 <!-- [tpl-js-nako3.html] -->
 <!-- 一度だけ取り込まれる部分 -->
 <script type="text/javascript">
+function isIE() {
+    var userAgent = window.navigator.userAgent.toUpperCase();
+    if (userAgent.indexOf('MSIE') >= 0 || userAgent.indexOf('TRIDENT') >= 0) {
+        return true
+    }
+    return false
+}
 
 // ace_editors instance
 /** @type {{ editor: any, editorMarkers: any }[]} */
@@ -11,7 +18,16 @@ function ace_editor_init(pid) {
         setTimeout(function() { ace_editor_init(pid) }, 100);
         return
     }
-    ace_editors[pid] = navigator.nako3.setupEditor("ace_editor" + pid);
+    if (isIE()) {
+        var edit = document.getElementById('nako3_code_' + pid)
+        edit.style.display = 'block'
+        console.log('textarea mode')
+    } else {
+        const ace = document.getElementById('ace_editor' + pid)
+        ace.style.display = 'block'
+        ace_editors[pid] = navigator.nako3.setupEditor('ace_editor' + pid)
+        console.log('ace_editor mode')
+    }
 }
 
 // post
@@ -21,13 +37,15 @@ function post_button_init(pid, can_save) {
     console.log('post_button_init='+pid, can_save)
 }
 function nako3_post_submit(pid) {
-    if (ace_editors[pid] === undefined) {
+    if (isIE() === false && ace_editors[pid] === undefined) {
         alert('現在ライブラリを読み込み中です。しばらくお待ちください。')
     }
     // get code
-    const edit = ace_editors[pid].editor;
-    const textarea = document.getElementById('nako3_code_' + pid);
-    textarea.value = edit.getValue();
+    if (!isIE()) {
+        const edit = ace_editors[pid].editor;
+        const textarea = document.getElementById('nako3_code_' + pid);
+        textarea.value = edit.getValue();
+    }
     // submit
     document.getElementById('nako3codeform_' + pid).submit();
 }
