--- a/kona3engine/plugins/nako3/tpl-style.html
+++ b/kona3engine/plugins/nako3/tpl-style.html
@@ -8,6 +8,10 @@
   margin:0; padding: 4px; font-size:1em; line-height:1.2em;
   width: 98%;
 }
+.nako3txt_readonly {
+  background-color: #fffff0;
+  resize: none;
+}
 .nako3ctrl {
   border-top: 1px solid #f0f0f0;
   border-bottom: 1px solid #f0f0f0;
