--- a/kona3engine/plugins/nako3/tpl-style.html
+++ b/kona3engine/plugins/nako3/tpl-style.html
@@ -1,7 +1,11 @@
 <!-- [tpl-style] -->
 <!-- 一度だけ取り込まれる部分 -->
 <style>
-.nako3 { border: 1px solid #a0a0ff; padding:4px; margin:2px; }
+.nako3 { 
+  border: 1px solid #a0a0ff; 
+  padding:4px; 
+  margin:2px; 
+}
 .nako3row { margin:0; padding: 0; }
 .nako3row_pad { padding-top: 4px; padding-bottom: 4px;}
 .nako3txt {
