--- a/kona3engine/plugins/nako3/tpl-js-nako3.html
+++ b/kona3engine/plugins/nako3/tpl-js-nako3.html
@@ -73,9 +73,9 @@ function nako3_run(id, use_canvas, use_textarea) {
   const preCode = addon + "\n"
   // 結果やcanvasを表示する
   const resultDiv = document.getElementById("nako3result_div_" + id)
-  resultDiv.style.display = "block"
+  if (resultDiv) {resultDiv.style.display = "block"}
   const canvasDom = document.querySelector(canvas_name)
-  canvasDom.style.display = "block"
+  if (canvasDom) {canvasDom.style.display = "block"}
   if (use_textarea) {
       var body = document.getElementById('nako3_code_' + id).value
       navigator.nako3.runReset(preCode + body, preCode)
