--- a/kona3engine/plugins/nako3/tpl-js-edit.html
+++ b/kona3engine/plugins/nako3/tpl-js-edit.html
@@ -12,8 +12,10 @@ function isIE() {
 // ace_editors instance
 /** @type {{ editor: any, editorMarkers: any }[]} */
 const ace_editors = {}
+const use_textarea_b = {}
 
 function ace_editor_init(pid, use_textarea) {
+    use_textarea_b[pid] = use_textarea
     if (navigator.nako3 === undefined) {
         setTimeout(function() { ace_editor_init(pid, use_textarea) }, 200);
         return
@@ -37,19 +39,14 @@ function post_button_init(pid, can_save) {
 }
 function nako3_post_submit(pid) {
     // use_textarea ?
-    if (!use_textarea) {
-        if (ace_editors[pid] === undefined) {
-            alert('現在ライブラリを読み込み中です。しばらくお待ちください。')
-            return
-        }
-    } else {
+    if (!use_textarea_b[pid]) {
         // copy ace_editor to textarea
         const edit = ace_editors[pid].editor;
         const textarea = document.getElementById('nako3_code_' + pid);
         textarea.value = edit.getValue();
     }
     // submit
-    document.getElementById('nako3codeform_' + pid).submit();
+    document.getElementById('nako3codeform_' + pid).submit()
 }
 
 // 仮保存のための処理
