--- a/kona3engine/plugins/nako3/tpl-js-edit.html
+++ b/kona3engine/plugins/nako3/tpl-js-edit.html
@@ -28,7 +28,7 @@ function ace_editor_init(pid, use_textarea) {
         const ace = document.getElementById('ace_editor' + pid)
         ace.style.display = 'block'
         ace_editors[pid] = navigator.nako3.setupEditor('ace_editor' + pid)
-        console.log('[#nako3 plugin] ace_editor mode')
+        // console.log('[#nako3 plugin] ace_editor mode')
     }
 }
 
