nako3 plugins: 貯蔵庫でDOM部品オプションのテーブル背景色が正しく反映されるように修正 https://github.com/kujirahand/nadesiko3/issues/1786

--- a/kona3engine/plugins/nako3/tpl-style.html
+++ b/kona3engine/plugins/nako3/tpl-style.html
@@ -1,76 +1,103 @@
 <!-- [tpl-style] -->
 <!-- 一度だけ取り込まれる部分 -->
 <style>
-.nako3 { 
-  border: 1px solid #a0a0ff; 
-  padding:4px; 
-  margin:2px; 
-}
-.nako3row { margin:0; padding: 0; }
-.nako3row_pad { padding-top: 4px; padding-bottom: 4px;}
-.nako3txt {
-  margin:0; padding: 4px; font-size:1em; line-height:1.2em;
-  width: 98%;
-}
-.nako3txt_readonly {
-  background-color: #fffff0;
-  resize: none;
-}
-.nako3ctrl {
-  border-top: 1px solid #f0f0f0;
-  border-bottom: 1px solid #f0f0f0;
-  margin: 0px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 4px;
-}
-.nako3ctrl button, 
-.post_span button { font-size:1em; padding:8px; }
-.post_span { margin-left: 8px; }
-.tmp_btn {
-  border-bottom: 1px solid gray;
-  text-decoration: none;
-  padding: 4px;
-  font-size: 0.8em;
-  background-color: #f3f3ff;
-}
-.tmp_btn > a {
-  color: black;
-}
-.nako3info {
-  background-color: #f3f3ff71;
-  border: 1px solid #a0a0ff;
-  padding: 4px; margin: 0;
-  font-size: 1em;
-  width:98%;
-}
-.nako3error {
-  background-color: #fff0f0; padding:8px; color: #904040;
-  font-size:1em; border:1px solid #a0a0ff; margin:4px;
-}
-.nako3ver { font-size:0.7em; color:gray; }
-.nako3_conv_html_link {
-  color: navy;
-  font-size: 9px; padding: 4px;
-  border: 1px solid silver;
-  background-color: #f0f0f0;
-}
-.nako3_div {
-  font-size: 1em;
-  line-height: 1.5em;
-}
-.nako3_div button {
-  margin: 4px;
-  padding: 4px;
-  font-size: 0.9em;
-}
-.nako3_div input {
-  margin: 6px;
-  padding: 6px;
-}
-.nako3_div input[type=checkbox] {
-  padding: 4px;
-  margin: 4px;
-}
+  .nako3 {
+    border: 1px solid #a0a0ff;
+    padding: 4px;
+    margin: 2px;
+  }
+  .nako3row {
+    margin: 0;
+    padding: 0;
+  }
+  .nako3row_pad {
+    padding-top: 4px;
+    padding-bottom: 4px;
+  }
+  .nako3txt {
+    margin: 0;
+    padding: 4px;
+    font-size: 1em;
+    line-height: 1.2em;
+    width: 98%;
+  }
+  .nako3txt_readonly {
+    background-color: #fffff0;
+    resize: none;
+  }
+  .nako3ctrl {
+    border-top: 1px solid #f0f0f0;
+    border-bottom: 1px solid #f0f0f0;
+    margin: 0px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 4px;
+  }
+  .nako3ctrl button,
+  .post_span button {
+    font-size: 1em;
+    padding: 8px;
+  }
+  .post_span {
+    margin-left: 8px;
+  }
+  .tmp_btn {
+    border-bottom: 1px solid gray;
+    text-decoration: none;
+    padding: 4px;
+    font-size: 0.8em;
+    background-color: #f3f3ff;
+  }
+  .tmp_btn > a {
+    color: black;
+  }
+  .nako3info {
+    background-color: #f3f3ff71;
+    border: 1px solid #a0a0ff;
+    padding: 4px;
+    margin: 0;
+    font-size: 1em;
+    width: 98%;
+  }
+  .nako3error {
+    background-color: #fff0f0;
+    padding: 8px;
+    color: #904040;
+    font-size: 1em;
+    border: 1px solid #a0a0ff;
+    margin: 4px;
+  }
+  .nako3ver {
+    font-size: 0.7em;
+    color: gray;
+  }
+  .nako3_conv_html_link {
+    color: navy;
+    font-size: 9px;
+    padding: 4px;
+    border: 1px solid silver;
+    background-color: #f0f0f0;
+  }
+  .nako3_div {
+    font-size: 1em;
+    line-height: 1.5em;
+  }
+  .nako3_div button {
+    margin: 4px;
+    padding: 4px;
+    font-size: 0.9em;
+  }
+  .nako3_div input {
+    margin: 6px;
+    padding: 6px;
+  }
+  .nako3_div input[type="checkbox"] {
+    padding: 4px;
+    margin: 4px;
+  }
+  #kona3_main .nako3_div td,
+  #kona3_main .nako3_div th {
+    background-color: initial;
+  }
 </style>
 <!-- [/tpl-style] -->
